--- a/casbin/casbin.vcxproj
+++ b/casbin/casbin.vcxproj
@@ -105,6 +105,7 @@
       <PreprocessorDefinitions>_DEBUG;CASBIN_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -151,22 +152,53 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="config\config.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="enforcer.cpp" />
+    <ClCompile Include="internal_api.cpp" />
+    <ClCompile Include="management_api.cpp" />
+    <ClCompile Include="model\assertion.cpp" />
+    <ClCompile Include="model\function.cpp" />
+    <ClCompile Include="model\model.cpp" />
+    <ClCompile Include="model\scope_config.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="persist\default_watcher.cpp" />
+    <ClCompile Include="persist\default_watcher_ex.cpp" />
+    <ClCompile Include="persist\file-adapter\batch_file_adapter.cpp" />
+    <ClCompile Include="persist\file-adapter\file_adapter.cpp" />
+    <ClCompile Include="persist\file-adapter\filtered_adapter.cpp" />
+    <ClCompile Include="rbac\default_role_manager.cpp" />
+    <ClCompile Include="rbac\group_role_manager.cpp" />
+    <ClCompile Include="rbac_api.cpp" />
+    <ClCompile Include="rbac_api_with_domains.cpp" />
+    <ClCompile Include="util\array_equals.cpp" />
+    <ClCompile Include="util\array_remove_duplicates.cpp" />
+    <ClCompile Include="util\array_to_string.cpp" />
+    <ClCompile Include="util\built_in_functions.cpp" />
+    <ClCompile Include="util\ends_with.cpp" />
+    <ClCompile Include="util\escape_assertion.cpp" />
+    <ClCompile Include="util\find_all_occurences.cpp" />
+    <ClCompile Include="util\is_instance_of.cpp" />
+    <ClCompile Include="util\join.cpp" />
+    <ClCompile Include="util\join_slice.cpp" />
+    <ClCompile Include="util\remove_comments.cpp" />
+    <ClCompile Include="util\set_subtract.cpp" />
+    <ClCompile Include="util\split.cpp" />
+    <ClCompile Include="util\trim.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="config\config.h" />
     <ClInclude Include="config\config_interface.h" />
+    <ClInclude Include="config\pch.h" />
     <ClInclude Include="duktape\duktape.h" />
     <ClInclude Include="duktape\duktape_core.h" />
     <ClInclude Include="duktape\duk_config.h" />
     <ClInclude Include="duktape\scope.h" />
-    <ClInclude Include="effect\default_effector.h" />
     <ClInclude Include="effect\effect.h" />
     <ClInclude Include="effect\effector.h" />
     <ClInclude Include="enforcer.h" />
@@ -179,7 +211,6 @@
     <ClInclude Include="exception\IOException.h" />
     <ClInclude Include="exception\MissingRequiredSections.h" />
     <ClInclude Include="exception\UnsupportedOperationException.h" />
-    <ClInclude Include="internal_api.h" />
     <ClInclude Include="IPParser\exceptions\ParseException.h" />
     <ClInclude Include="IPParser\parser\allFF.h" />
     <ClInclude Include="IPParser\parser\byte.h" />
@@ -201,40 +232,28 @@
     <ClInclude Include="log\Log.h" />
     <ClInclude Include="log\Logger.h" />
     <ClInclude Include="log\LogUtil.h" />
-    <ClInclude Include="management_api.h" />
     <ClInclude Include="model\assertion.h" />
     <ClInclude Include="model\function.h" />
     <ClInclude Include="model\model.h" />
+    <ClInclude Include="model\pch.h" />
     <ClInclude Include="model\scope_config.h" />
     <ClInclude Include="persist\adapter.h" />
     <ClInclude Include="persist\adapter_filtered.h" />
     <ClInclude Include="persist\batch_adapter.h" />
-    <ClInclude Include="persist\default_watcher.h" />
     <ClInclude Include="persist\default_watcher_ex.h" />
     <ClInclude Include="persist\file-adapter\batch_file_adapter.h" />
     <ClInclude Include="persist\file-adapter\file_adapter.h" />
-    <ClInclude Include="persist\file-adapter\filtered_adapter.h" />
+    <ClInclude Include="persist\file-adapter\pch.h" />
+    <ClInclude Include="persist\pch.h" />
     <ClInclude Include="persist\watcher.h" />
     <ClInclude Include="persist\watcher_ex.h" />
     <ClInclude Include="rbac\default_role_manager.h" />
     <ClInclude Include="rbac\group_role_manager.h" />
+    <ClInclude Include="rbac\pch.h" />
     <ClInclude Include="rbac\role_manager.h" />
-    <ClInclude Include="rbac_api.h" />
-    <ClInclude Include="rbac_api_with_domains.h" />
-    <ClInclude Include="util\array_equals.h" />
-    <ClInclude Include="util\array_remove_duplicates.h" />
-    <ClInclude Include="util\array_to_string.h" />
     <ClInclude Include="util\built_in_functions.h" />
-    <ClInclude Include="util\ends_with.h" />
-    <ClInclude Include="util\escape_assertion.h" />
-    <ClInclude Include="util\find_all_occurences.h" />
-    <ClInclude Include="util\is_instance_of.h" />
-    <ClInclude Include="util\join.h" />
-    <ClInclude Include="util\join_slice.h" />
-    <ClInclude Include="util\remove_comments.h" />
-    <ClInclude Include="util\set_subtract.h" />
-    <ClInclude Include="util\split.h" />
-    <ClInclude Include="util\trim.h" />
+    <ClInclude Include="util\pch.h" />
+    <ClInclude Include="util\util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
